remove refresh azure button and fix some white space

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -8,6 +8,10 @@ body {
   min-height: 100%;
 }
 
+#azureStorage {
+  padding-top: 38px;
+}
+
 .panel {
   z-index: 0;
 }
